--- a/fe-src/index.html
+++ b/fe-src/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./pages/home.css">
     <script type="module" src="index.ts"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.js"></script>
-    <link rel="stylesheet" href="index.css" />
     <title>mvc-profile</title>
   </head>
   <body>
-    <header-el></header-el>
-    <div class="container">
+    <div class="root"></div>
+    <!-- <div class="container">
       <form class="formulario">
         <label for="name">Tu Nombre</label>
         <input class="input" type="text" name="name" />
@@ -20,7 +21,7 @@
           <button type="button" class="foto-input">Cargar imagen</button>
         </div>
         <button type="submit" class="button">guardar</button>
-      </form>
+      </form> -->
     </div>
   </body>
 </html>
