para casa Cards

--- a/fe-src/index.html
+++ b/fe-src/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="./pages/home.css">
     <script type="module" src="index.ts"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.js"></script>
-    <title>mvc-profile</title>
+    <title>pet Finder</title>
   </head>
   <body>
     <div class="root"></div>
