--- a/fe-src/index.html
+++ b/fe-src/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="./pages/home.css">
+    <link rel="stylesheet" href="./pages/home-mascotas.css">
+    <link rel="stylesheet" href="./pages/ingresar.css">
     <script type="module" src="index.ts"></script>
-    <title>pet Finder</title>
+    <title>Pet Finder</title>
   </head>
   <body>
     <div class="root"></div>
@@ -21,6 +26,7 @@
         </div>
         <button type="submit" class="button">guardar</button>
       </form> -->
+      <a href=""></a>
     </div>
   </body>
 </html>
