--- a/fe-src/index.html
+++ b/fe-src/index.html
@@ -20,6 +20,10 @@
       href="//api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <script type="module" src="index.ts"></script>
     <title>Pet Finder</title>
   </head>
