--- a/fe-src/index.html
+++ b/fe-src/index.html
@@ -24,6 +24,10 @@
       href="https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link
+      href="https://api.mapbox.com/mapbox-assembly/v1.3.0/assembly.min.css"
+      rel="stylesheet"
+    />
     <script type="module" src="index.ts"></script>
     <title>Pet Finder</title>
   </head>
