--- a/fe-src/index.html
+++ b/fe-src/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./pages/home-mascotas.css" />
     <link rel="stylesheet" href="./pages/ingresar.css" />
     <link rel="stylesheet" href="./pages/reportpets.css" />
+    <link rel="stylesheet" href="./pages/signup.css" />
     <script src="//api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
     <script src="//unpkg.com/mapbox@1.0.0-beta9/dist/mapbox-sdk.min.js"></script>
     <link
